[gd_scene load_steps=8 format=3 uid="uid://d2j45frcuhmki"]

[ext_resource type="Script" path="res://attacks/shockwave_attack.gd" id="1_b6stl"]
[ext_resource type="Script" path="res://hitbox_component.gd" id="2_p1vqb"]
[ext_resource type="AudioStream" uid="uid://b83xhww8nljml" path="res://sounds/mixkit-quest-game-heavy-stomp-v-3049.wav" id="2_p51aj"]
[ext_resource type="Script" path="res://knockback_component.gd" id="3_de5l4"]
[ext_resource type="Script" path="res://sound_player.gd" id="4_p3vsy"]

[sub_resource type="Curve" id="Curve_7ah0p"]
max_value = 100.0
_data = [Vector2(0.0223642, 0), 0.0, 0.0, 0, 0, Vector2(0.984026, 56.9427), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_ed3bc"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.405751, 0.503185), 0.0, 0.0, 0, 0, Vector2(0.578275, 0.403822), 0.0, 0.0, 0, 0, Vector2(0.86262, 0.33758), 0.0, 0.0, 0, 0]
point_count = 4

[node name="ShockwaveAttack" type="Node2D"]
script = ExtResource("1_b6stl")
stomp_sound = ExtResource("2_p51aj")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 8
script = ExtResource("2_p1vqb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]

[node name="KnockbackComponent" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 9
script = ExtResource("3_de5l4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="KnockbackComponent"]

[node name="ShockwaveParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 60
lifetime = 0.2
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 130.0
initial_velocity_max = 130.0
damping_curve = SubResource("Curve_7ah0p")
scale_amount_min = 2.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_ed3bc")

[node name="SoundPlayer" type="Node" parent="."]
script = ExtResource("4_p3vsy")
